--- a/src/index.css
+++ b/src/index.css
@@ -379,9 +379,20 @@ a {
         height: 1rem;
         cursor: pointer;
     }
+    a {
+        display: none;
+    }
 }
 
 @media screen  and (max-width: 380px) {
+    h1 {
+        font-size: 2rem;
+        letter-spacing: .2rem;
+    }
+    .theme-mode {
+        width: 1.7rem;
+        height: 1.7rem;
+    }
     .input-wrap::before {
         width: 1.3rem;
         height: 1.3rem;
@@ -390,18 +401,18 @@ a {
         font-size: 16px;
     }
     span {
-        font-size: 14px;
+        font-size: 18px;
     }
     .checkmark {
-        width: 1.3rem;
-        height: 1.3rem;
+        width: 1.4rem;
+        height: 1.4rem;
     }
     .checkmark-fin {
-        width: 1.3rem;
-        height: 1.3rem;
+        width: 1.4rem;
+        height: 1.4rem;
     }
     .delete-btn {
-        width: .8rem;
-        height: .8rem;
+        width: .9rem;
+        height: .9rem;
     }
 }
